# Familiar-Connect

./: .audit-fixes.md  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  bootstrapping.md  eval_sapphire.py  initialized.db  local.db  mkdocs.yml  package.json  persistence.md  plan.md  pr-description.md  pyproject.toml  smoke_test_attentional.py  smoke_test_sapphire.py  tsconfig.eslint.json  twitch-commands-plan.md  twitch-features.md
.claude/workflows/: sapphire-decompose.js  sapphire-eval.js
.githooks/: pre-commit
.github/workflows/: ci-cd.yml  ci.yml
discord-bot/: package-lock.json  package.json
discord-bot/src/: index.js
docs/: contributing.md  index.md
docs/architecture/: activities.md  chattiness-fsm.md  concurrency-model.md  configuration-model.md  context-pipeline.md  conversation-flow.md  decisions.md  guards.md  interruption.md  memory-strategies.md  memory.md  message-flow.md  overview.md  prompting.md  roadmap.md  security.md  session-logging.md  sleep.md  streaming-bus.md  tuning.md  turso-migration.md  typing-simulation.md  voice-input.md  voice-pipeline.md
docs/getting-started/: initializing-from-narrative.md  installation.md  on-disk-layout.md  slash-commands.md  troubleshooting.md
docs/guides/: bootstrapping.md  metrics.md  twitch.md
docs/hooks/: cli_reference.py
docs/roadmap/: conversation-flow.md  gemini-tts-expressivity.md  index.md  interruption-flow.md  proactive-cross-channel-reading.md  session-logging.md  threads-and-forum-posts.md  voice-input.md  voice-logging.md  web-search.md
docs/rust-port/: DAVE-RUNBOOK.md  (+1 more)
evals/: haiku_knowledge_breadth.py  haiku_knowledge_breadth_r2.py  haiku_reinforcements.py  haiku_reinforcements_r2.py  haiku_reinforcements_r3.py  haiku_reinforcements_r4.py  haiku_vs_glm_sapphire.py
familiar-connect/: Cargo.toml  build.rs
faster-whisper/: index.py  requirements.txt
future-features/: chattiness-personality.md  configuration-levels.md  context-management.md  conversation-flow.md  interruption-flow.md  lorebook.md  memory.md  persistence.md  text-channel-summoning.md  threads-and-forum-posts.md  voice-channel-logging.md  voice-text-input.md  web-search.md
js/: init_db.js  package-lock.json  package.json
json_schemas/: message_input.json
python/: api-transcribe.py  audio.py  local-whisper.py  message-processing.py  openai-whisper.py  requirements.txt  twitch.py
rust/: DAVE-RUNBOOK.md
rust/familiar-connect/: Cargo.toml
rust/familiar-connect/src/: bot.rs  budget.rs  cli.rs  config.rs  familiar.rs  focus.rs  identity.rs  llm.rs  log_style.rs  macros.rs  main.rs  prompt_fill.rs  sentence_streamer.rs  silence.rs  structured_output.rs  structured_request.rs  subscriptions.rs  tts.rs  twitch.rs  twitch_watcher.rs  typing_interrupt.rs
rust/familiar-connect/src/activities/: config.rs  engine.rs  mod.rs
rust/familiar-connect/src/bus/: envelope.rs  in_process.rs  mod.rs  protocols.rs  router.rs  topics.rs
rust/familiar-connect/src/commands/: diagnose.rs  run.rs  version.rs
rust/familiar-connect/src/context/: assembler.rs  final_reminder.rs  layers.rs  mod.rs
rust/familiar-connect/src/diagnostics/: cold_cache.rs  collector.rs  mod.rs  report.rs  spans.rs  voice_budget.rs
rust/familiar-connect/src/embedding/: factory.rs  fastembed.rs  hash.rs  mod.rs  protocol.rs
rust/familiar-connect/src/history/: async_store.rs  db.rs  fts.rs  mod.rs  store.rs
rust/familiar-connect/src/processors/: debug_logger.rs  fact_embedding_worker.rs  fact_extractor.rs  fact_supersede_worker.rs  history_writer.rs  mod.rs  people_dossier_worker.rs  projectors.rs  reflection_worker.rs  summary_worker.rs  text_responder.rs  voice_responder.rs
rust/familiar-connect/src/sleep/: apply.rs  consolidation.rs  maintenance.rs  mod.rs  opinion_formation.rs
rust/familiar-connect/src/sources/: discord_embed_text.rs  discord_text.rs  twitch.rs  voice.rs
rust/familiar-connect/src/stt/: deepgram.rs  factory.rs  faster_whisper.rs  mod.rs  parakeet.rs  protocol.rs
rust/familiar-connect/src/support/: round.rs  text.rs  time.rs
rust/familiar-connect/src/tools/: agentic.rs  alarm.rs  builtins.rs  channel_view.rs  image.rs  image_compress.rs  image_describe.rs  mod.rs  read_channel.rs  registry.rs  scheduler.rs  shift_focus.rs  silent.rs  start_activity.rs  waker.rs
rust/familiar-connect/src/tts_player/: discord_player.rs  logging_player.rs  mock.rs  mod.rs  protocol.rs
rust/familiar-connect/src/voice/: audio.rs  dave_client.rs  dave_ws.rs  recording_sink.rs
rust/familiar-connect/src/voice/turn_detection/: endpointer.rs  factory.rs  mod.rs  smart_turn.rs  ten_vad.rs
rust/familiar-connect/tests/: config_identity_config.rs  context_focus_manager.rs  context_rag_merge_facts.rs  history_db.rs  history_facts.rs  history_store.rs  responders_attentional.rs  responders_history_writer.rs  responders_tools.rs  tools_alarm.rs  tools_image.rs  workers_fact_extractor.rs
rust/familiar-connect/tests/responders_support/: mod.rs
rust/familiar-connect/tests/sleep_helpers/: mod.rs
scripts/: ci-local.sh  migrate_sqlite_to_turso.py  setup-dev-env.sh
src/: index.ts
tests/: conftest.py  test_activities_config.py  test_activity_engine.py  test_agentic_loop.py  test_alarm_scheduler.py  test_alarm_tool.py  test_alarm_waker.py  test_attentional_layers.py  test_attentional_responders.py  test_attentional_store.py  test_attentional_tools.py  test_audio_resample.py  test_bot.py  test_bot_interactions.py  test_bot_message_loop.py  test_bot_text.py  test_bus.py  test_bus_envelope.py  test_bus_protocols.py  test_bus_router.py  test_bus_topics.py  test_channel_config_store.py  test_channel_view.py  test_character.py  test_character_provider.py  test_chattiness.py  test_cli.py  test_cold_cache_signals.py  test_config.py  test_consolidation.py  test_content_search_filter.py  test_content_search_provider.py  test_context_assembler.py  test_context_budget.py  test_context_budget_layers.py  test_context_pipeline.py  test_context_types.py  test_dave_client.py  test_dave_ws.py  test_debug_logger_processor.py  (+137 more)
(+352 files in other folders)
