[project]
name = "familiar-connect"
dynamic = ["version"]
readme = "README.md"
authors = [
    { name = "Cassidy Prather", email = "pratherea@gmail.com" }
]
requires-python = ">=3.13, < 3.14"
dependencies = [
    "defusedxml >= 0.7.1, < 1",
    "PyNaCl >= 1.5.0, < 2",
    "py-cord >= 2.7.0, < 3",
    "davey >= 0.1.5, < 1",
    "twitchAPI >= 4.2.0, < 5",
    "python-dotenv >= 1.0.0, < 2",
    "httpx >= 0.28.0, < 1",
    "tzdata >= 2025.1",
    "azure-cognitiveservices-speech >= 1.42.0, < 2",
    "google-genai >= 1.51.0, < 2",
    "colorama>=0.4.6",
    "tomli-w >= 1.2, < 2",
]

[project.scripts]
familiar-connect = "familiar_connect.cli:main"

[project.optional-dependencies]
# Local turn-detection: Silero VAD (~2 MB ONNX) + Smart Turn v3
# (~360 MB ONNX). Installed via:
#     uv sync --extra local-turn
# numpy carries onnxruntime's tensor I/O. ONNX models live under
# data/models/ — download separately, see docs/architecture/voice-pipeline.md.
local-turn = [
    "onnxruntime >= 1.18, < 2",
    "numpy >= 1.26, < 3",
]

[dependency-groups]
dev = [
    "ruff >= 0.14.3, < 1",
    "ty >= 0.0.25, < 1",
    "pytest >= 8.3.3, < 9",
    "pytest-cov >= 7.0.0, < 8",
    "pytest-asyncio >= 0.24.0, < 2",
    "gcovr >= 8.4, < 9",
    "build >= 1.2.1, < 2",
    "twine >= 6.2.0, < 7",
    "requests >= 2.32.5, < 3",
]
docs = [
    "mkdocs >= 1.6, < 2",
    "mkdocs-material >= 9.5, < 10",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
addopts = "-m 'not integration'"
markers = [
    "integration: live external-service tests; skipped by default, run with `-m integration`",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/familiar_connect/_version.py"

[tool.uv]
default-groups = ["dev", "docs"]
exclude-newer = "7d"

[tool.uv.exclude-newer-package]
defusedxml = "1d"
ruff = "2d"
ty = "1d"
davey = "1d"

[tool.ruff]
extend-exclude = ["src/familiar_connect/_version.py"]

[tool.ruff.lint]
preview = true # I'm not a coward!

select = [
    "AIR", # airflow
    "ERA", # eradicate
    "FAST", # FastAPI
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    "ASYNC", # flake8-async
    "S", # flake8-bandit
    "BLE", # flake8-blind-except
    "FBT", # flake-boolean-trap
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "DJ", # flake8-django
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "FIX", # flake8-fixme
    "FA", # flake8-future-annotations
    "INT", # flake8-gettext
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "LOG", # flake8-logging
    "G", # flake8-logging-format
    "INP", # flake8-no-pep420
    "PIE", # flake8-PIE
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT", # flake8-pytest-style
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "SLOT", # flake8-slots
    "TID", # flake8-tidy-imports
    "TD", # flake8-todos
    "TC", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "FLY", # flynt
    "I", # isort
    "NPY", # NumPy-specific rules
    "PD", # pandas-vet
    "N", # pep8-naming
    "PERF", # Perflint
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "DOC", # pydoclint
    "D", # pydocstyle
    "F", # pyflakes
    "PGH", # pygrep-hooks
    "PLC", # Pylint Convention
    "PLE", # Pylint Error
    "PLR", # Pylint Refactor
    "PLW", # Pylint Warning
    "UP", # pyupgrade
    "FURB", # refurb
    "RUF", # ruff-specific rules
    "TRY", # tryceratops
]
ignore = [
    "D10", # Undocumented stuff (not everything needs a docblock you dumb little [___])
    "D203", # Ruff throws a warning if you include both this and D211
    "D213", # Ruff throws a warning if you include both this and D212
    "DOC201", # Rule is broken and doesn't detect :return: clauses
    "DOC501", # Doesn't detect :raises: clauses and fails to ignore abstract
    "EM101", # Doesn't account for custom constructors
    "PLR09", # Complexity begets defects, and these rules promote Complexity
    "PLR1702", # Redundant with max line width
    "PLR6301", # Rule is broken (doesn't work for implementations of abstract)
    "PLR2004", # Magic values aren't always bad. Sometimes, fewer lines are nice
    "COM812", # Broken, see: https://github.com/astral-sh/ruff/issues/9216
    "TRY400", # ??? https://docs.python.org/3/library/logging.html#logging-levels
    "G004", # styled console logs compose ANSI sequences via f-strings
]

[tool.ruff.lint.per-file-ignores]
# Mkdocs hooks are loaded by file path (see `hooks:` in mkdocs.yml),
# so they aren't part of any Python package and don't need __init__.py.
"docs/hooks/**/*.py" = [
    "INP001", # implicit namespace package is fine — loaded by mkdocs, not imported
]
"tests/**/*.py" = [
    "S101", # Allow assert in tests
    "S105", # Hardcoded fake tokens in tests are fine
    "S106",
    "SLF001", # Tests often poke at private members
    "FBT003", # Boolean positional args common in mock assertions
    "ANN202", # Private helper annotations not critical in tests
    "PLC2701", # Tests import private names for unit testing
]

[tool.ruff.format]
preview = true # No cowards allowed!
